<resources>
    <string name="pan_app_name">自动翻炒锅</string>
    <string name="pan_back">返回</string>
    <string name="pan_quick_fry">持续快炒</string>
    <string name="pan_quick_frying">持续快炒中</string>
    <string name="pan_stir_fry">十秒翻炒</string>
    <string name="pan_stir_frying">十秒翻炒中</string>
    <string name="pan_oil_temp">锅温</string>
    <string name="pan_oil_temp_hint1">℃：当前温度适合快炒、炝锅、干炸、酥炸</string>
    <string name="pan_oil_temp_hint2">℃：当前温度适合爆炒、清炸、复炸、煎肉、泼油</string>
    <string name="pan_oil_temp_hint3">℃：当前温度适合淋油、泼油</string>
    <string name="pan_oil_temp_hint4">℃：锅温过热！完成该炉头关火</string>
    <string name="pan_standby_ing">待机中</string>
    <string name="pan_open_fire_hint">为确保安全，不能远程开火，请在左灶开火</string>
    <string name="pan_cancel">取消</string>
    <string name="pan_curve_hint">烹饪曲线需搭配智能灶具进行烹饪</string>
    <string name="pan_match_stove">匹配灶具</string>
    <string name="pan_stop_creation_hint">确认结束当前创作</string>
    <string name="pan_stop_creation">结束创作</string>
    <string name="pan_continue_creation">继续创作</string>
    <string name="pan_connect_retry">重新连接</string>
    <string name="pan_stop_cooking_hint">烹饪结束，油烟机与明火自动翻炒锅\n已断开连接，请检查连接设置</string>
    <string name="pan_select_stove_hint">请选择工作炉头，并将明火自动翻炒锅放置于对应炉头</string>
    <string name="pan_close_fire_use">关火后可以使用</string>
    <string name="pan_left_stove">左灶</string>
    <string name="pan_right_stove">右灶</string>
    <string name="pan_stove_hold">占用</string>
    <string name="pan_stove_leisure">空闲</string>
    <string name="pan_recharge_hint">明火自动翻炒锅电量低\n请及时充电</string>
    <string name="pan_got_it">知道了</string>
    <string name="pan_share_hint">打开ROKI APP，扫一扫分享</string>
    <string name="pan_input_curve_name_hint">请输入曲线名称</string>
    <string name="pan_ok">确认</string>
    <string name="pan_favorite_empty">这里还是空空如也，\n请前往ROKI APP添加我的最爱菜谱</string>
    <string name="pan_delete">删除</string>
    <string name="pan_select_all">全选</string>
    <string name="pan_qrcode">二维码</string>
    <string name="pan_material">食材</string>
    <string name="pan_time">时间  %smin</string>
    <string name="pan_recipe_detail">菜谱详情</string>
    <string name="pan_home">主页</string>
    <string name="pan_start_cook">开始烹饪</string>
    <string name="pan_stop_cook">结束烹饪</string>
    <string name="pan_curve_name_hint">给曲线起个名字吧</string>
    <string name="pan_back_home">返回首页</string>
    <string name="pan_save_surve">保存曲线</string>
    <string name="pan_save_success">保存成功</string>
    <string name="pan_input_empty">输入不能为空</string>
    <string name="pan_no_recipe">没有相关菜谱</string>
    <string name="pan_recipe_step_des">%s.%s</string>
    <string name="pan_cur_step">当前步骤%s/%s</string>
    <string name="pan_step2">步骤%s/%s</string>
    <string name="pan_stop_cook_hint">确认结束当前烹饪</string>
    <string name="pan_delete_ok">确认删除</string>
    <string name="pan_stove_using">占用</string>
    <string name="pan_open_left_hint">请在左灶点火\n为确保安全,不能远程开火</string>
    <string name="pan_open_right_hint">请在右灶点火\n为确保安全,不能远程开火</string>
    <string name="pan_no_curve_data">没有曲线数据</string>
    <string name="pan_need_match_pan">需匹配智能锅进行烹饪</string>
    <string name="pan_need_match_stove">需匹配智能灶具进行烹饪</string>
    <string name="pan_go_match">去匹配</string>
    <string name="pan_offline">智能锅已离线</string>
    <string name="pan_stove_offline">智能灶已离线</string>
    <string name="pan_pan_offline">智能锅已离线</string>
    <string name="pan_connect_failed">网络连接失败</string>
    <string name="pan_pan_working">智能锅工作中</string>
    <string name="pan_maintain_phone">维修电话：658889789</string>
    <string name="pan_warning_e1_title">报警信息</string>
    <string name="pan_warning_e4_content">温度传感器故障</string>
    <string name="pan_warning_e5_content">电机故障</string>
    <string name="pan_battery">电量</string>
</resources>