<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pan_ic_bg">

    <include
        android:id="@+id/ll_title"
        layout="@layout/pan_view_layout_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/pan_guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <com.robam.common.ui.view.ClearEditText
        android:id="@+id/et_curve_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp_32"
        android:layout_marginLeft="@dimen/dp_100"
        android:layout_marginTop="@dimen/dp_70"
        android:textColor="@color/pan_white"
        android:maxLength="11"
        android:maxLines="1"
        android:hint="@string/pan_input_curve_name_hint"
        android:textColorHint="@color/pan_white_20"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_title"
        app:layout_constraintRight_toRightOf="@id/pan_guideline2"/>

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="@dimen/dp_175"
        android:layout_height="@dimen/dp_56"
        android:layout_marginRight="@dimen/dp_60"
        android:gravity="center"
        android:textSize="@dimen/sp_30"
        android:textColor="@color/pan_white"
        android:text="@string/pan_cancel"
        android:background="@drawable/pan_shape_button_bg_cancel"
        app:layout_constraintRight_toLeftOf="@id/tv_ok"
        app:layout_constraintBaseline_toBaselineOf="@id/et_curve_name"/>

    <TextView
        android:id="@+id/tv_ok"
        android:layout_width="@dimen/dp_175"
        android:layout_height="@dimen/dp_56"
        android:layout_marginRight="@dimen/dp_38"
        android:gravity="center"
        android:textSize="@dimen/sp_30"
        android:textColor="@color/pan_white"
        android:text="@string/pan_ok"
        android:background="@drawable/pan_shape_button_bg_ok"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/et_curve_name"/>
</androidx.constraintlayout.widget.ConstraintLayout>